Bug 87676 Fix z-index of sash to not be higher than the popup menu's 500 z-index.
http://bugzilla.zimbra.com/show_bug.cgi?id=87676

Copied from Perforce
 Change: 503563

--- a/WebRoot/skins/harmony/skin.css
+++ b/WebRoot/skins/harmony/skin.css
@@ -202,7 +202,7 @@ TD.DwtListView-ColumnActive  {
 }
 
 .console_inset_app_l {
-	z-index:599 !important;  /* 1 less than veil */
+	z-index:499 !important;  /* 1 less than veil */
 }
 
 .console_inset_app_l .HSashThumb {
